--- a/rose.html
+++ b/rose.html
@@ -4,9 +4,7 @@
            <meta charset="utf-8">
            <title>Rock the Dragon</title>
      <style>
-         body {
-             background-image: url("images/niceu.png");
-         }
+         body {background-image: url("images/niceu.png");}
      </style>
        </head>
            <h1>
