--- a/rose.html
+++ b/rose.html
@@ -20,7 +20,7 @@ Welcome to Cameron T's page (CCP2)
           
 <p><a href="https://thedoktasdomain-contagioussoul.c9users.io/index.html"><font color="pink"> Click this link to become cool bro.</font></a></p>
 <p><a href="https://scratch.mit.edu/projects/247233031/"><font color="red"> This game is a mistake.</font></a> </p>
-<p><a href="https://repl.it/@ContagiousSoul/CostlyLastDatum"><font color="red"> This is a mistake too.</font></a> </p>
+<p><a href="https://repl.it/@ContagiousSoul/CostlyLastDatum"><font color="red"> This is a interative mistake.</font></a> </p>
 <img src="https://thumbs.gfycat.com/ScaryDelectableFawn-size_restricted.gif" alt="RoseGif">
       </body>
   </html>
