--- a/spicyboys.html
+++ b/spicyboys.html
@@ -21,6 +21,6 @@
           <p> Add me on PSN: <font color="gree"><b>ContagiousSoul</b></font></p>
           <p> Add me on instagram: contagioussoul </p>
           <p><b>Or don't. I'll live</b></p>
-          <img src="images/Hot-Spicy-Blazing-2016.png" width="500" height="374">
+          <img src="images/spice.png">
       </body>
   </html>
