--- a/spicyboy.html
+++ b/spicyboy.html
@@ -47,7 +47,7 @@
 <body background="niceu.png">
     <ul>
         <li><a class="active" href="rose.html">Home</a></li>
-        <li><a href="#Major">Special</a></li>
+        <li><a href="projects.html">Special</a></li>
         <li><a href="monday_fun.html">Monday Assignment</a></li>
         <li><a href="fun.html">Friday Fun</a></li>
         <li><a href="doctor.html">Webpage 1</a></li>
